<resources>
    <string name="app_name">CamCurrency</string>
    <string name="overlay_help">Center numbers inside box.</string>
    <string name="operator">Operator:</string>
    <string name="value">Value:</string>
    <string name="set">Set</string>
    <string name="converted">Converted:</string>
    <string name="to">to:</string>
    <string name="zero_val">0.00</string>
    <string-array name="operatorSpinner">
        <item>Multiply</item>
        <item>Divide</item>
    </string-array>
</resources>