<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.camera.view.PreviewView
                android:id="@+id/viewFinder"
                android:layout_gravity="top|left"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </androidx.camera.view.PreviewView>
            <SurfaceView
                android:id="@+id/overlay"
                android:layout_gravity="top|left"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">
            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.05" />
            <LinearLayout
                android:id="@+id/operatorLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="0.1"
                android:weightSum="1">
                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25" />
                <TextView
                    android:id="@+id/operatorText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="end|center"
                    android:layout_weight="0.2"
                    android:text="@string/operator" />
                <Spinner
                    android:id="@+id/operatorSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3" />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/valueLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="0.15"
                android:weightSum="1">
                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25" />
                <TextView
                    android:id="@+id/valueText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="end|center"
                    android:layout_weight="0.2"
                    android:text="@string/value" />
                <EditText
                    android:id="@+id/valueNumberDecimal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:ems="6"
                    android:inputType="numberDecimal" />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/buttonLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:weightSum="1">
                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.375" />
                <Button
                    android:id="@+id/button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:onClick="onSetBtn"
                    android:text="@string/set" />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.375" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/outputLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:weightSum="1">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.15" />

                <TextView
                    android:id="@+id/textView"
                    android:gravity="end|center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.20"
                    android:text="@string/converted" />

                <TextView
                    android:id="@+id/convertedInputText"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.20"
                    android:textSize="25sp"
                    android:text="@string/zero_val" />

                <TextView
                    android:id="@+id/textView2"
                    android:gravity="end|center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.10"
                    android:text="@string/to" />

                <TextView
                    android:id="@+id/convertedOutputText"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.40"
                    android:textSize="50sp"
                    android:text="@string/zero_val" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.15" />
            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>